--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,8 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-runtime_${scala.binary.version}</artifactId>
 			<version>${flink.version}</version>
+			<classifier>tests</classifier>
 			<type>test-jar</type>
-			<scope>test</scope>
 		</dependency>
 
 		<dependency>
